k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: micro-20
  labels:
    name: micro-20
