k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
        - image: illiesdhb/projweb-front-app:2.1
          imagePullPolicy: IfNotPresent
          name: myservice
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bdd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bdd
  template:
    metadata:
      labels:
        app: bdd
    spec:
      containers:
        - name: postgres
          image: illiesdhb/projweb-back-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
