k8s/loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myservice
  name: myservice
spec:
  ports:
    - nodePort: 30945
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservice
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: bdd-service
spec:
  selector:
    app: bdd
  ports:
    - port: 543
